chromium-browser (5.0.375.29~r46008-2) UNRELEASED; urgency=low

  * Do not pre-depend on lzma. Thanks to Sven Joachim. (Closes: #580485)
    - update debian/control

 -- Giuseppe Iuculano <iuculano@debian.org>  Thu, 06 May 2010 12:17:54 +0200

chromium-browser (5.0.375.29~r46008-1) experimental; urgency=low

  * Switch to system libs and enabled libxml
    - update debian/rules
  * Use system libevent, libicu and libxslt
    - update debian/rules
    - update debian/control
  * Add app_unittests_strings to INSTALL_EXCLUDE_DIRS
    - update debian/rules
  * Add a gnome-www-browser alternative (LP: #571103)
    - update debian/chromium-browser.{postinst,prerm}
  * New upstream release from the Beta Channel
  * Build with build_ffmpegsumo=0 instead of use_system_ffmpeg=1 (which
    now means something else)
    - update debian/rules
  * Install resources/{bookmark_manager,net_internals} in the main deb
    - update debian/chromium-browser.install
  * Drop the sse2 patch, it has been applied upstream, and set disable_sse2
    - drop debian/patches/drop_sse2.patch
    - update debian/patches/series
    - update debian/rules
  * Add app_unittests_strings, resources/{calendar_app,docs_app,gmail_app}
    and pyproto to INSTALL_EXCLUDE_DIRS
    - update debian/rules
  * Fixed a typo in the maintainer field
    - update debian/control
  * Removed ubuntu_dont_overwrite_default_download_directory.patch, the default
    download location can be set via the options dialog
    - update debian/patches/series
    - removed ubuntu_dont_overwrite_default_download_directory.patch
  * use dh_install --list-missing
    - update debian/rules
  * Updated VCS control field, at this moment is a private branch on launchpad
    - update debian/control
  * Updated debian/copyright and fixed glitches pointed out by ftpmaster
    - update debian/copyright
    - update debian/copyright.problems
  * Added a strict depend in chromium-browser-inspector
    - update debian/control
