@@ -2,8 +2,12 @@ chromium-browser (5.0.375.29~r46008-2) UNRELEASED; urgency=low
 
   * Do not pre-depend on lzma. Thanks to Sven Joachim. (Closes: #580485)
     - update debian/control
+  * Do not force -j$(PROCESSORS), use DEB_BUILD_OPTIONS's parallel=n option
+    instead so the person doing the build can decide how many processes to run
+    in parallel. (Closes: #580490)
+    - update debian/rules
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Thu, 06 May 2010 12:17:54 +0200
+ -- Giuseppe Iuculano <iuculano@debian.org>  Fri, 07 May 2010 14:31:20 +0200
 
 chromium-browser (5.0.375.29~r46008-1) experimental; urgency=low
 
